src/Lead/objects/Lead/fields/All_Event_Activities__c.field-meta.xml
<CustomField>
    <fullName>All_Event_Activities__c</fullName>
    <defaultValue>0</defaultValue>
    <label>All Event Activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>