src/Lead/objects/Lead/fields/All_Event_Activities_for_Last_7_Days__c.field-meta.xml
<CustomField>
    <fullName>All_Event_Activities_for_Last_7_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>All Event Activities for Last 7 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>