src/Lead/objects/Lead/fields/All_Log_Call_Activities__c.field-meta.xml
<CustomField>
    <fullName>All_Log_Call_Activities__c</fullName>
    <defaultValue>0</defaultValue>
    <label>All Log Call Activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>