src/Lead/objects/Lead/fields/Original_TFN_Number__c.field-meta.xml
<CustomField>
    <fullName>Original_TFN_Number__c</fullName>
    <description>Field populated by the did parameter from nextCall response</description>
    <label>Original TFN Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>